# git-switch

./: .gitignore  .profiles.json  Cargo.toml  LICENSE  README.md  gh.sh  go.mod  main.go
.github/workflows/: release.yml  rust.yml
Formula/: gs.rb
src/: main.rs
