[package]
name = "gs"
version = "0.1.0"
edition = "2024"
authors = ["Ian Irizarry <me@ianirizarry.com>"]
description = "Switch between Git profiles instantly"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.1"
